<resources>
    <string name="app_name">Society MS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in_to_your_account_and_start_working_out">Sign In to your account!</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">welcome back!</string>
    <string name="welcome_first_time">welcome!</string>
    <string name="enter_login_details">Enter Login Details</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="good_afternoon">good afternoon</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="society_already_registered">Already registered society?</string>
    <string name="society_not_found">Can\'t find you society?</string>
    <string name="sign_up_to_continue">Sign up to continue!</string>
    <string name="select_society_to_continue">Select Society to continue!</string>
    <string name="enter_details">Enter Details</string>
    <string name="your_name">Your Name</string>
    <string name="society_name">Name of your society</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_society">Register Society</string>
    <string name="get_you_account_back_reset_password">Get Your account back. Reset Password</string>
    <string name="verify">Verify</string>
    <string name="otp_here">OTP here</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp_that_you_received_on_your_mail">Enter OTP that you received on your mail</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm New password</string>
    <string name="update_password">Update Password</string>
    <string name="update_smal_password">update password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="or">or</string>
    <string name="exit_app">Exit App</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="category_title">Category Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plot_number">Plot Number</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="upload_profile_pic">Upload Profile Pic</string>
    <string name="upload_society_registration">Upload Registration</string>
    <string name="enter_room_details">Enter Room Details</string>
    <string name="room_number">Room Number</string>
    <string name="room_size_in_square_feet">Room Size in square feet</string>
    <string name="save_room_details">Save Room Details</string>
    <string name="size_square_feet">Size (square feet)</string>
    <string name="add_rooms">Add Rooms</string>
    <string name="add_rooms_to_your_society">Add Rooms to your society</string>
    <string name="hello">hello</string>
</resources>