<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/main_back"
    tools:context=".Fragments.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logo"
                android:elevation="3dp"
                android:src="@drawable/ic_logo"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/logo"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans"
                    android:textSize="15sp"
                    android:text="@string/society_not_found" />

                <TextView
                    android:id="@+id/registerSociety"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/register_society" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sacramento"
            android:text="@string/welcome_first_time"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="20dp"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="#000"
            android:text="@string/select_society_to_continue" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/recyclerView"/>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>
