<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".fragments.RegisterSocietyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:elevation="3dp"
                    android:src="@drawable/ic_logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/logo"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/society_already_registered"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/signIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/sacramento"
                android:text="@string/welcome_first_time"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/register_society"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/enter_details"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"

                android:padding="10dp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/top_edittext"
                    android:fontFamily="@font/nunito_sans"
                    android:hint="@string/society_name"
                    android:inputType="textPersonName"
                    android:lineSpacingExtra="5.3sp"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="#272626"
                    android:textColorHint="#a9a9a9"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/addr1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/middle_edittext"
                    android:fontFamily="@font/nunito_sans"
                    android:hint="@string/address_line_1"
                    android:inputType="textEmailAddress"
                    android:lineSpacingExtra="5.3sp"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="#272626"
                    android:textColorHint="#a9a9a9"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/addr2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/middle_edittext"
                    android:fontFamily="@font/nunito_sans"
                    android:hint="@string/address_line_2"
                    android:inputType="textEmailAddress"
                    android:lineSpacingExtra="5.3sp"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="#272626"
                    android:textColorHint="#a9a9a9"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/plotNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/middle_edittext"
                    android:fontFamily="@font/nunito_sans"
                    android:hint="@string/plot_number"
                    android:inputType="number"
                    android:lineSpacingExtra="5.3sp"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="#272626"
                    android:textColorHint="#a9a9a9"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/bottom_edittext"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:gravity="center_vertical"
                    android:paddingVertical="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_sans"
                        android:text="Parking Available"
                        android:textColor="#A09E9E"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/parkingToggle"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:textOff="No"
                        android:textOn="Yes"
                        android:textColor="@color/grey"
                        android:thumb="@drawable/toggle_thumb"
                        android:paddingVertical="5dp"
                        android:layout_margin="5dp"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:checked="false"
                        />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/allround_editext">

                    <ImageView
                        android:id="@+id/uploadImageView"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:scaleType="fitXY"
                        android:padding="10dp"
                        android:visibility="gone"
                        android:background="@drawable/message_back"
                        android:src="@drawable/no_data"/>

                    <Button
                        android:id="@+id/uploadImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@+id/uploadImageView"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:text="@string/upload_profile_pic"
                        android:textAllCaps="false"
                        android:textSize="18sp" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/allround_editext">

                    <ImageView
                        android:id="@+id/uploadFileView"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/word"
                        android:visibility="gone"
                        android:padding="15dp"
                        android:background="@drawable/message_back"
                        />

                    <Button
                        android:id="@+id/uploadSocietyRegistration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/uploadFileView"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:text="@string/upload_society_registration"
                        android:textAllCaps="false"
                        android:textSize="18sp" />

                </RelativeLayout>

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/addRooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/blue_filled_back"
                android:elevation="3dp"
                android:padding="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableEnd="@drawable/ic_right_arrow"
                    android:drawablePadding="7dp"
                    android:fontFamily="@font/nunito_sans"
                    android:text="Proceed To Add Room Details"
                    android:textColor="#fff"
                    android:textSize="20sp" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>
