<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".fragments.RegisterSocietyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/enter_room_details"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/roomNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/top_edittext"
                    android:fontFamily="@font/nunito_sans"
                    android:hint="@string/room_number"
                    android:inputType="text"
                    android:lineSpacingExtra="5.3sp"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="#272626"
                    android:textColorHint="#a9a9a9"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/roomSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/bottom_edittext"
                    android:fontFamily="@font/nunito_sans"
                    android:hint="@string/room_size_in_square_feet"
                    android:inputType="numberDecimal"
                    android:lineSpacingExtra="5.3sp"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="#272626"
                    android:textColorHint="#a9a9a9"
                    android:textSize="15sp" />

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/addRooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/blue_filled_back"
                android:elevation="3dp"
                android:padding="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableEnd="@drawable/ic_right_arrow"
                    android:drawablePadding="7dp"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/save_room_details"
                    android:textColor="#fff"
                    android:textSize="20sp" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>
